
slc.publications 1.1.9 (unreleased)
-----------------------------------
- Chapter links now always point to the url. Normally, if you click on a link
 and you have edit rights, you would go to the link view and not to the link 
 target. Since we already offer a second edit link, when somebody has edit 
 rights, the regular link can point directly to the place the link points to. 
 (gerken)

slc.publications 1.1.8 (2009-09-30)
-----------------------------------
- Hide the JS-scanner induced PDF icon from the Related publications list on the publication's view (jcbrand)

slc.publications 1.1.7 (2009-09-15)
-----------------------------------
- Add try,except to decouple slc.publications from Products.LinguaPlone (jcbrand)
- don't display a JS-scanner--induced PDF-icon in front of the publication's title (thomasw)

slc.publications 1.1.6 (2009-08-26)
-----------------------------------

- Add remove_additionals event handler in adapter/events.py and register it via zcml for IObjectRemovedEvent (jcbrand)
- Edited the object_added event: removed the code that sets translation
  references, it has been superseded by slc.autotranslate. (jcbrand)
- Removed _findAbbrev in adapter/events.py, it's no longer being called (jcbrand)
- Added a new doctest file events.txt to test for the above actions. (jcbrand)

slc.publications 1.1.5 (2009-08-13)
-----------------------------------

- enhanced setuphandlers.py (together with import_steps.xml and config.py) to automatically install dependencies. (jcbrand)
- remove explicit blob checking in adapter/publication.py and instead do it via zcml, i.e zcml:condition="installed plone.app.blob" (jcbrand)
- modified addTranslation patch to return the translated item as is done in of LinguaPlone >= 2.3 (jcbrand)
- various new translations have been added (thomasw)

slc.publications 1.1.4 (2009-07-26)
-----------------------------------

- have links to publication language versions open in a new window (pilz)
