@@ -64,63 +64,6 @@ def generate_image(obj, evt):
         
     interfaces.IPublication(obj).generateImage()
     
-   
-def updateChapterLinksForTranslation(ob):
-    """ Read the chapternames and compair them to the Link objects inside the
-        Publication for all translations. Add/Delete where they differ
-        syncronizes the chapter links in ob to be compliant with the
-        current portal languages and the chapters in getChapter
-    """
-    pw = getToolByName(ob, 'portal_workflow')
-    if ob is None:
-        return 
-    chapterfield = ob.getField('chapters')
-    if chapterfield is None:
-        logger.warn('Publication has no chapterfield: %s' % ob.absolute_url())
-        return
-    chapters = chapterfield.getAccessor(ob)()
-    
-    additionals = _get_storage_folder(ob)
-    links = additionals.objectIds('ATLink')
-
-    # remove all links which are not named in getChapters
-    RM = []
-    for l in links:
-        if l not in chapters:
-            RM.append(l)
-    additionals.manage_delObjects(ids=RM)
-
-    for c in chapters:
-        c = c.encode('utf-8')
-        if c not in links:
-            additionals.invokeFactory('Link', c)
-            L = getattr(additionals, c)
-            L.setTitle(c)
-            L.setLanguage(ob.Language())
-            remurl = "/%s#%s" % ( urllib.unquote(ob.absolute_url(1)), c )
-            L.edit(remurl)
-            L.unmarkCreationFlag()
-            pw.doActionFor(L, 'publish', comment='Publish publication link %s in language %s.' % (c, ob.Language()))   
-            L.reindexObject()
-
-def update_chapters(obj, evt):
-    """ EVENT: 
-        Update the chapter links based on the new set values in chapters
-    """    
-    # Make sure we execute this only on the canonical
-    if HAVE_LINGUAPLONE:
-        if obj != obj.getCanonical():
-            return
-            
-    if HAVE_LINGUAPLONE:
-        translations = obj.getTranslations()
-    else:
-        translations = {obj.Language(): (obj, obj.Language())}
-
-    for T in translations.keys():
-        updateChapterLinksForTranslation(translations[T][0])
-
-
 # Event handler to catch our own patched event while translation named IObjectTranslationReferenceSetEvent
 # We need this to be able to subtype an object while it is translated.
 def subtype_on_translate(obj, evt):
@@ -133,3 +76,72 @@ def subtype_on_translate(obj, evt):
     subtype = subtyper.existing_type(canonical)
     if subtype is not None:
         subtyper.change_type(target, subtype.name)
+
+class ChapterUpdater:
+    """
+    This adapter will take care of updating the Chapters
+    of a publication
+    """
+    def __init__(self, publication, event):
+        self.publication = publication
+        self.event = event
+        # Make sure we only do this on canonical version
+        if HAVE_LINGUAPLONE:
+            if self.publication != self.publication.getCanonical():
+                return
+        
+        if HAVE_LINGUAPLONE:
+            translations = [x[0] for x in publication.getTranslations().values() 
+                            if x[0] is not None]
+        else:
+            translations = [self.publication]
+
+        for translation in translations:
+            chapterfield = translation.getField('chapters')
+            if chapterfield is None:
+                logger.warn('Publication has no chapterfield: %s' % 
+                            translations.absolute_url())
+                continue
+            chapters = chapterfield.getAccessor(translation)()
+
+            reference_container = _get_storage_folder(translation)
+            references = self.getReferences(reference_container)
+
+            outdated = []
+            for reference in references:
+                if reference not in chapters:
+                    outdated.append(reference)
+            reference_container.manage_delObjects(ids = outdated)
+
+            for chapter in chapters:
+                chapter = chapter.encode('utf-8')
+                if chapter not in references:
+                    self.addChapter(translation, chapter)
+
+    def getReferences(self, reference_container):
+        return reference_container.objectIds('ATLink')
+
+    def addChapter(self, translation, chapter):
+        reference_container = _get_storage_folder(translation)
+        reference_container.invokeFactory('Link', chapter)
+        new_chapter = getattr(reference_container, chapter)
+        new_chapter.setTitle(chapter)
+        new_chapter.setLanguage(translation.Language())
+        remote_url = "/%s#%s" % (urllib.unquote(translation.absolute_url(1)), 
+                                 chapter)
+        new_chapter.edit(remote_url)
+        new_chapter.unmarkCreationFlag()
+        self.setState(new_chapter, translation.Language())
+        new_chapter.reindexObject()
+
+    @property
+    def portal_workflow(self):
+        if not hasattr(self, '__portal_workflow'):
+            self.__portal_workflow = getToolByName(self.publication, 
+                                                   'portal_workflow')
+        return self.__portal_workflow
+
+    def setState(self, chapter, language):
+        comment = "Publish publication in %s in language %s" % \
+                  (chapter, language)
+        self.portal_workflow.doActionFor(chapter, 'publish', comment)
